<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main">

    <!-- Изображение -->
    <ImageView
        android:id="@+id/imageViewComic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/c1_1" />

    <!-- Кнопки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:fontFamily="@font/intersemibold"
            android:backgroundTint="@color/main_accent"
            android:text="@string/comic_back" />

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:fontFamily="@font/intersemibold"
            android:backgroundTint="@color/main_accent"
            android:text="@string/comic_go" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/main"
            android:textSize="15sp"
            android:fontFamily="@font/intersemibold"
            android:backgroundTint="@color/main_accent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="11dp"
            android:visibility="gone" />
    </LinearLayout>

    <!-- Кнопка "Начать" (по умолчанию скрыта) -->


</LinearLayout>